; ModuleID = '/home/carl/AnghaBench/nginx/src/event/extr_ngx_event_openssl.c_ngx_ssl_client_session_cache.c'
source_filename = "/home/carl/AnghaBench/nginx/src/event/extr_ngx_event_openssl.c_ngx_ssl_client_session_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@NGX_OK = common dso_local global i32 0, align 4
@SSL_SESS_CACHE_CLIENT = common dso_local global i32 0, align 4
@SSL_SESS_CACHE_NO_INTERNAL = common dso_local global i32 0, align 4
@ngx_ssl_new_client_session = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_ssl_client_session_cache(i32* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %3
  %11 = load i32, i32* @NGX_OK, align 4
  store i32 %11, i32* %4, align 4
  br label %26

12:                                               ; preds = %3
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @SSL_SESS_CACHE_CLIENT, align 4
  %17 = load i32, i32* @SSL_SESS_CACHE_NO_INTERNAL, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @SSL_CTX_set_session_cache_mode(i32 %15, i32 %18)
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @ngx_ssl_new_client_session, align 4
  %24 = call i32 @SSL_CTX_sess_set_new_cb(i32 %22, i32 %23)
  %25 = load i32, i32* @NGX_OK, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %12, %10
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @SSL_CTX_set_session_cache_mode(i32, i32) #1

declare dso_local i32 @SSL_CTX_sess_set_new_cb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
